# -ELF-2-

./: README.md
APP/Embedded_Android3/: camera_digest_alarm.py  debug-thermal-low-recall.md  dual_detect_service.py  settings.gradle.kts
APP/Embedded_Android3/.dbg/: thermal-low-recall.env
APP/Embedded_Android3/app/: build.gradle.kts
APP/Embedded_Android3/app/src/main/: AndroidManifest.xml
APP/Embedded_Android3/app/src/main/res/drawable/: longin_et_bg.xml
APP/Embedded_Android3/gradle/: libs.versions.toml
APP/Embedded_Android3/gradle/wrapper/: gradle-wrapper.properties
ELF 2/elf_slam_ws/install/: local_setup.sh  setup.sh
ELF 2/elf_slam_ws/install/YbImuLib/share/YbImuLib/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ELF 2/elf_slam_ws/install/elf_slam/lib/elf_slam/: diff_drive_controller  encoder_bridge  encoder_raw  robot_description_publisher  scan_stamp_fix
ELF 2/elf_slam_ws/install/elf_slam/share/elf_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ELF 2/elf_slam_ws/install/elf_slam/share/elf_slam/config/: robot_dimensions.yaml
ELF 2/elf_slam_ws/install/elf_slam/share/elf_slam/launch/: navigation_launch.py  save_map_launch.py
ELF 2/elf_slam_ws/install/imu_ros2_device/lib/imu_ros2_device/: ybimu_driver
ELF 2/elf_slam_ws/install/imu_ros2_device/share/imu_ros2_device/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ELF 2/elf_slam_ws/install/lslidar_driver/share/lslidar_driver/: package.sh
ELF 2/elf_slam_ws/install/lslidar_msgs/share/lslidar_msgs/: local_setup.sh  package.sh
ELF 2/elf_slam_ws/src/elf_slam/: setup.cfg  setup.py
ELF 2/elf_slam_ws/src/elf_slam/config/: diff_drive_params.yaml
ELF 2/elf_slam_ws/src/elf_slam/elf_slam/: diff_drive_controller.py  robot_description_publisher.py  scan_stamp_fix.py
ELF 2/elf_slam_ws/src/elf_slam/launch/: online_async_launch.py
ELF 2/elf_slam_ws/src/elf_slam/src/: encoder_raw.c
ELF 2/elf_slam_ws/src/imu_ros2_device/: package.xml
ELF 2/elf_slam_ws/src/imu_ros2_device/launch/: ybimu_display.launch.py
ELF 2/elf_slam_ws/src/lslidar_driver/launch/: lsn10_launch.py
ELF 2/elf_slam_ws/src/lslidar_driver/params/lidar_uart_ros2/: lsn10.yaml
ELF 2/rknn_yolov8_demo/: 1.py  camera_digest_alarm.py  detection_marker_bridge.py
ELF 2/test/: TCP  TCP.c  s_and_c.c  s_and_c.ko
(+20 files in other folders)
