<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_ros2_device</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="xxxx@163.com">ayue</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>YbImuLib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
