<?xml version="1.0"?>
<package format="3">
  <name>elf_slam</name>
  <version>0.0.0</version>
  <description>ELF Robot SLAM package for RK3588</description>
  <maintainer email="elf@todo.todo">elf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <!-- 注意：imu_ros2_device 如果没安装，rosdep 会报错，可以根据需要选填 -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
